# MistLog

./: .gitignore  meson.build  meson_options.txt
examples/: main.c  meson.build  simple.c  windows_continuous_example.c
include/: mist_log.h
src/: mist_log.c  mist_log_file.c
subprojects/: sso_string.wrap
